syntax = "proto3";

option csharp_namespace = "Revit.Services.Grpc.Services";

import "CommonMessages.proto";

service RevitActiveDocumentNotification {
	rpc OnDocumentChanged (EmptyRequest) returns (stream .OnDocumentChangedResponse);
}

enum DocumentActionEnum {
	Activated = 0;
	Closed = 1;
}

message DocumentDescriptor {
	string Title = 1;
	string Id = 2;
	DocumentActionEnum DocumentAction = 3;
}

message OnDocumentChangedResponse {
	DocumentDescriptor DocumentDescriptor = 1;
}